fix: stretch header search to fill full container width
Remove max-width constraint on search bar so header items
visually span the same width as the main content area below.

--- a/client/src/app/components/header/header.scss
+++ b/client/src/app/components/header/header.scss
@@ -70,7 +70,6 @@
 // --- Search ---
 .header__search {
   flex: 1;
-  max-width: 320px;
   position: relative;
   display: flex;
   align-items: center;
@@ -332,7 +331,7 @@
   }
 
   .header__search {
-    max-width: 200px;
+    flex: 1;
   }
 
   .drawer-backdrop,
